# derivbase

./: LICENSE  derivbase.cabal
src/: .DerivBase.hs.swp  DerivBase.hs
src/DerivBase/: .DerivSets.hs.swp  .LemmaClusters.hs.swp  DerivFamilies.hs  DerivPairs.hs  DerivSets.hs  Lemma.hs  LemmaClusters.hs  LemmaItem.hs  LemmaPos.hs
