name:                derivbase
version:             0.1.0.0
synopsis:            Derivational morphology database API
-- description:         
homepage:            http://github.com/jsnajder/derivbase
license:             BSD3
license-file:        LICENSE
author:              Jan Snajder
maintainer:          jan.snajder@fer.hr
-- copyright:           
category:            NLP
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     
    DerivBase,
    DerivBase.DerivPairs,
    DerivBase.DerivSets,
    DerivBase.Lemma
  -- other-modules:       
  build-depends:       
    base ==4.6.*,
    containers ==0.5.*
  hs-source-dirs: src

